# Python

PedraPapelTesoura/: README.md  gui_main.py  main.py
PedraPapelTesoura_Web/: index.html  script.js  style.css
execicios/: exe1.py  exe10.py  exe11.py  exe2.py  exe3.py  exe4.py  exe5.py  exe6.py  exe7.py  exe9.py
execicios/FastAPI/dio.blog/: pyproject.toml
execicios/dicionario/: exe1.py
