[project]
name = "dio-blog"
version = "0.1.0"
description = ""
authors = [
    {name = "Julia",email = "jufarias20002@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "fastapi",
    "uvicorn[standard] (>=0.46.0,<0.47.0)"
]

[tool.poetry]
packages = [{include = "dio"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
